# PInT

./: .gitignore  CMakeLists.txt  CallTreeVisitor.cpp  CallTreeVisitor.h  PatternGraph.cpp  PatternGraph.h  README.md  build.sh
include/: HPCParallelPattern.h  HPCPatternInstrASTTraversal.h  Helpers.h  PatternGraph.h  SimilarityMetrics.h
include/clang/: ASTConsumerDelegator.h  ASTDelegatorConsumer.h  ASTFrontendDelegatorAction.h  ASTFrontendInstrumentationAction.h  ASTInstrumentationConsumer.h  DelegatorFrontendAction.h
include/metric/: CohesionStatistic.h  FunctionPointAnalysisStatistic.h  HalsteadStatistic.h
include/metric/cohesion/: ConnectedPatternCounter.h
include/metric/fpa/: ExternalInput.h  ExternalInquiry.h  ExternalInterfaceFile.h  ExternalOutput.h  FunctionPoint.h  FunctionPointAnalysisVisitor.h  FunctionPointComparator.h  FunctionPointComplexity.h  InternalLogicalFile.h  PrettyPrinter.h  PrintPretty.h
include/metric/halstead/: HalsteadVisitor.h
include/similarity/: CosineSimilarityStatistic.h  JaccardSimilarityStatistic.h  OverlapCoefficientStatistic.h  PatternSequence.h  SimilarityPair.h  WeightedJaccardSimilarityStatistic.h
include/similarity/visitor/: CompositionVisitor.h  (+2 more)
include/visitor/: CallTreeVisitor.h  ClangPatternVisitor.h  HPCParallelPatternVisitor.h  PatternGraphNodeVisitor.h  PatternOccurrenceVisitor.h
src/: CMakeLists.txt  HPCParallelPattern.cpp  HPCPatternInstrASTTraversal.cpp  HPCPatternInstrHandler.cpp  HPCPatternStatistics.cpp  HPCPatternTool.cpp  HPCRunningStats.cpp  Helpers.cpp  PatternGraph.cpp  SimilarityMetrics.cpp
src/clang/: ASTConsumerDelegatorVisitor.cpp  ASTDelegatorConsumer.cpp  ASTFrontendDelegatorAction.cpp  ASTInstrumentationConsumer.cpp  DelegatorFrontendAction.cpp  FrontendInstrumentationAction.cpp
src/metric/: CohesionStatistic.cpp  FunctionPointAnalysisStatistic.cpp  HalsteadStatistic.cpp
src/metric/cohesion/: ConnectedPatternCounter.cpp
src/metric/fpa/: ExternalInput.cpp  ExternalInquiry.cpp  ExternalInterfaceFile.cpp  ExternalOutput.cpp  FunctionPoint.cpp  FunctionPointAnalysisVisitor.cpp  InternalLogicalFile.cpp  PrettyPrinter.cpp  PrintPretty.cpp
src/metric/fpa/visitor/: AbstractConditionalOperatorVisitor.cpp  AssignmentOperatorVisitor.cpp  BinaryOperatorVisitor.cpp  DataFunctionVisitor.cpp  DeclRefExprVisitor.cpp  FunctionPointAnalysisVisitor.cpp  TransactionalFunctionVisitor.cpp  UnaryOperatorVisitor.cpp  VarDeclVisitor.cpp
src/metric/halstead/: HalsteadVisitor.cpp
src/similarity/: CosineSimilarityStatistic.cpp  JaccardSimilarityStatistic.cpp  OverlapCoefficientStatistic.cpp  PatternSequence.cpp  SimilarityPair.cpp  WeightedJaccardSimilariyStatistic.cpp
src/similarity/visitor/: BottomUpCompositionVisitor.cpp  CompositionVisitor.cpp  TopDownCompositionVisitor.cpp
src/visitor/: CallTreeVisitor.cpp  ClangDelegatorVisitor.cpp  HPCParallelPatternVisitor.cpp  PatternGraphNodeVisitor.cpp  PatternOccurrenceVisitor.cpp
test/TestFunctionPointAnalysis/: DesiredOutput.txt  TestDataFunction.cpp  TestDataFunction.h  TestTransactionalFunction.cpp  TestTransactionalFunction.h  mainTestFunctionPointAnalysis.cpp
test/TestNoTree/: CMakeLists.txt  mainNoTree.cpp
(+10 files in other folders)
